@@ -1644,7 +1644,7 @@ table thead tr th, table thead tr td {
   padding: 2em;
   margin-bottom: 1em;
   background: white;
-  border: 1px solid #d5dbe0;
+  border: 1px solid #eceff1;
 }
 #comments ul.children {
   list-style: none;
@@ -1655,10 +1655,11 @@ table thead tr th, table thead tr td {
 #comments .comment-header img.avatar {
   float: left;
   margin-bottom: 0.5em;
+  box-shadow: 0 1px 4px 0 rgba(69, 90, 100, 0.16);
 }
 #comments .comment-header .comment-date {
-  background-color: #CCCCCC;
-  color: #fff;
+  background-color: #fafafa;
+  color: #78909c;
   font-size: 12px;
   right: 0;
   padding: 5px 20px;
@@ -1673,10 +1674,11 @@ table thead tr th, table thead tr td {
   margin-top: 1em;
 }
 #comments a.comment-reply-link {
-  background-color: #FAFAFA;
-  color: #CCCCCC;
-  font-size: 10px;
-  padding: 5px 10px;
+  background-color: #cfd8dc;
+  color: white;
+  font-size: 12px;
+  padding: 2px 10px;
+  float: right;
   transition: all 0.2s ease;
   -webkit-transition: all 0.2s ease;
   -moz-transition: all 0.2s ease;
@@ -1684,7 +1686,7 @@ table thead tr th, table thead tr td {
   -ms-transition: all 0.2s ease;
 }
 #comments a.comment-reply-link:hover {
-  background-color: #d5d5d5;
+  background-color: #aabac1;
   color: white;
 }
 #comments .moderated {
@@ -1696,6 +1698,7 @@ table thead tr th, table thead tr td {
   background-color: #FAFAFA;
   padding: 2em;
   margin-bottom: 1em;
+  border: 1px solid #eceff1;
 }
 .comment-respond h3#reply-title {
   font-size: 1.25em;
@@ -1712,7 +1715,7 @@ table thead tr th, table thead tr td {
   box-shadow: none;
   color: #38474d;
   padding: 1em;
-  background-color: #EEEEEE;
+  background-color: white;
 }
 .comment-respond textarea:focus, .comment-respond input[type="text"]:focus, .comment-respond input[type="email"]:focus, .comment-respond input[type="url"]:focus {
   background-color: white;
@@ -1721,13 +1724,17 @@ table thead tr th, table thead tr td {
   padding: 0 0 0 1em;
 }
 .comment-respond .form-submit input[type="submit"] {
-  background-color: #38474d;
+  background-color: #546e7a;
   color: #fff;
   font-size: 12px;
-  padding: 5px 20px;
   border: none;
   display: block;
   position: relative;
+  letter-spacing: 0.05em;
+  padding: 10px 20px;
+  text-decoration: none;
+  text-transform: uppercase;
+  box-shadow: 0 1px 4px 0 rgba(69, 90, 100, 0.16);
   transition: all 0.2s ease;
   -webkit-transition: all 0.2s ease;
   -moz-transition: all 0.2s ease;
@@ -1735,13 +1742,13 @@ table thead tr th, table thead tr td {
   -ms-transition: all 0.2s ease;
 }
 .comment-respond .form-submit input[type="submit"]:hover {
-  background-color: #485b63;
+  background-color: #4c636e;
 }
 .comment-respond a#cancel-comment-reply-link {
   font-family: "Open Sans", sans-serif;
-  background-color: #CCCCCC;
+  background-color: #cfd8dc;
   color: white;
-  font-size: 10px;
+  font-size: 12px;
   padding: 12px 10px;
   float: right;
   transition: all 0.2s ease;
@@ -1751,7 +1758,7 @@ table thead tr th, table thead tr td {
   -ms-transition: all 0.2s ease;
 }
 .comment-respond a#cancel-comment-reply-link:hover {
-  background-color: #b8b8b8;
+  background-color: #b6c4ca;
 }
 
 /*--------------------------------------------------------------
@@ -1854,6 +1861,11 @@ object {
 --------------------------------------------------------------*/
 .gallery {
   margin-bottom: 1.5em;
+}
+
+figure.gallery-item {
+  margin: 0;
+  padding: 0;
 }
 
 .gallery-item {
