@@ -4,6 +4,9 @@
 * Added unminified versions of Font Awesome & Slick Nav stylesheets for reference
 * Updating escaping in header.php and extras.php
 * Removed 'left-sidebar' tag
+* Updated default gallery display
+* Updated comments style
+* Fixed footer copyright setting
 
 = 1.0 - Sept 10, 2015 =
 * Initial release
